# ExpRun

./: .coveragerc  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: lint.yml  test.yml
examples/: script.py
examples/sparse_regression/: config.yaml  run.py  sparse_regression.py  sparse_regression.yml
experiment/: __init__.py  experiment.py  runner.py
expflow/: __init__.py  experiment.py  runner.py
exprun/: experiment.py  runner.py
tests/: test_experiment.py
