[project]
name = "expflow"
description = "Simple and Automatized Numerical Experiments"
readme = "README.md"
license = {file = "LICENSE", content-type = "text/markdown"}
authors = [{name = "Théo Guyard", email = "guyard.theo@gmail.com"}]
dependencies = ["pyyaml"]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "expflow.__version__"}

[project.optional-dependencies]
dev = ["black", "flake8", "numpy", "pytest"]

[project.urls]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
